--- a/5. Controle Clássico/T2/COMPENSADOR_aviao_rlocus.ipynb
+++ b/5. Controle Clássico/T2/COMPENSADOR_aviao_rlocus.ipynb
@@ -90,7 +90,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1467f13b7b7b46d093a1ba8925b7b7f0",
+       "model_id": "67c7cafd7c7d49f0bc588f2cf2042060",
        "version_major": 2,
        "version_minor": 0
       },
@@ -111,6 +111,15 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clicked at     -7.623   +0.1994j gain    0.03576 damp     0.9997\n",
+      "Clicked at     -9.015  -0.02373j gain     0.0123 damp          1\n",
+      "Clicked at     -1.169    +0.125j gain      3.345 damp     0.9943\n"
+     ]
     }
    ],
    "source": [
